重构优化导表工具代码