@@ -1,4 +1,4 @@
-package cn.chauncy;
+package cn.chauncy.option;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -12,9 +12,10 @@ public class ExcelExportConfig {
     private static final Path CONFIG_PATH = Paths.get("./config/config.properties");
 
     private static Path excelPath;
-    private static Path exportPath;
+    private static Path javaJsonOutPath;
 
-    private static Path outputPath;
+    private static Path javaClassOutPath;
+    private static String javaOutPackage;
 
     public static void loadConfig() {
         File configFile = CONFIG_PATH.toFile();
@@ -24,13 +25,15 @@ public class ExcelExportConfig {
         } catch (IOException e) {
             throw new RuntimeException("configFile not exist");
         }
-
         excelPath = Path.of(properties.getProperty("excel.path"));
-        exportPath = Path.of(properties.getProperty("export.path"));
-        outputPath = Paths.get(properties.getProperty("output.path"));
-        if (!exportPath.toFile().exists()
-                || !exportPath.toFile().isDirectory()
-                || !outputPath.toFile().exists()) {
+
+        javaJsonOutPath = Path.of(properties.getProperty("java.json.output.path"));
+        javaClassOutPath = Paths.get(properties.getProperty("java.class.output.path"));
+        javaOutPackage = properties.getProperty("java.class.output.package");
+
+        if (!javaJsonOutPath.toFile().exists()
+                || !javaJsonOutPath.toFile().isDirectory()
+                || !javaClassOutPath.toFile().exists()) {
             throw new RuntimeException("config path error");
         }
     }
@@ -39,12 +42,16 @@ public class ExcelExportConfig {
         return excelPath;
     }
 
-    public static Path getExportPath() {
-        return exportPath;
+    public static Path getJavaJsonOutPath() {
+        return javaJsonOutPath;
     }
 
-    public static Path getOutputPath() {
-        return outputPath;
+    public static Path getJavaClassOutPath() {
+        return javaClassOutPath;
+    }
+
+    public static String getJavaOutPackage() {
+        return javaOutPackage;
     }
 
 }
